--- a/Admin/Home/View/Menu/index.html
+++ b/Admin/Home/View/Menu/index.html
@@ -143,7 +143,7 @@
         <ul class="content-box-tabs">
           <li><a href="#tab1" class="default-tab">菜单列表(共{$news_count}个)</a></li>
           <!-- href must be unique and match the id of target div -->
-          <!-- <li><a href="#tab2">登录记录</a></li> -->
+          <li><a href="#tab2">菜单录入</a></li>
         </ul>
         <div class="clear"></div>
       </div>
@@ -174,12 +174,12 @@
               <volist name="menu_list" id="vo">
               <tr>
                 <td></td>
-                <td>{$vo.name_menu} </td>
-                <td>{$vo.price_menu}</a></td>
-                <td>{$vo.res_menu}</td>
+                <td>{$vo.food_name} </td>
+                <td>{$vo.food_price}</a></td>
+                <td>{$vo.food_res}</td>
                 <td>
                   <!-- 操作按钮 -->
-                  <a href="#tab2" title="编辑"><img src="__PUBLIC__/Images/admin/icons/pencil.png" alt="编辑" /></a>
+                  <a href="#" title="编辑"><img src="__PUBLIC__/Images/admin/icons/pencil.png" alt="编辑" /></a>
                   <a href="__URL__/delete/id/{$vo.id}" title="删除"><img src="__PUBLIC__/Images/admin/icons/cross.png" alt="删除" /></a>
 
                 </td>
@@ -214,25 +214,27 @@
 
 
         <div class="tab-content" id="tab2">
-          <form action="#" method="post">
+          <form action="__URL__/save" method="post">
             <fieldset>
-            Set class to "column-left" or "column-right" on fieldsets to divide the form into columns
+            <!-- Set class to "column-left" or "column-right" on fieldsets to divide the form into columns -->
             <p>
-              <label>Small form input</label>
-              <input class="text-input small-input" type="text" id="small-input" name="small-input" />
-              <span class="input-notification success png_bg">Successful message</span>
-              Classes for input-notification: success, error, information, attention
+              <label>菜单</label>
+              <input class="text-input small-input" type="text" id="small-input" name="food_name" />
+              <!-- <span class="input-notification success png_bg">Successful message</span> -->
+              <!-- Classes for input-notification: success, error, information, attention -->
               <br />
-              <small>A small description of the field</small> </p>
-            <p>
-              <label>Medium form input</label>
-              <input class="text-input medium-input datepicker" type="text" id="medium-input" name="medium-input" />
-              <span class="input-notification error png_bg">Error message</span> </p>
-            <p>
-              <label>Large form input</label>
-              <input class="text-input large-input" type="text" id="large-input" name="large-input" />
+              <small>输入菜名！</small>
             </p>
             <p>
+              <label>价格</label>
+              <input class="text-input medium-input datepicker" type="text" id="medium-input" name="food_price" />
+              <!-- <span class="input-notification error png_bg">Error message</span>
+            </p> -->
+            <p>
+              <label>餐厅</label>
+              <input class="text-input large-input" type="text" id="large-input" name="food_res" />
+            </p>
+            <!-- <p>
               <label>Checkboxes</label>
               <input type="checkbox" name="checkbox1" />
               This is a checkbox
@@ -242,7 +244,7 @@
               <label>Radio buttons</label>
               <input type="radio" name="radio1" />
               This is a radio button<br />
-              <input type="radio" name="radio2" />
+              <input type="radio" name="radio1" />
               This is another radio button </p>
             <p>
               <label>This is a drop down list</label>
@@ -251,18 +253,17 @@
                 <option value="option2">Option 2</option>
                 <option value="option3">Option 3</option>
                 <option value="option4">Option 4</option>
-              </select>
-            </p>
+              </select></p>
             <p>
               <label>Textarea with WYSIWYG</label>
               <textarea class="text-input textarea wysiwyg" id="textarea" name="textfield" cols="79" rows="15"></textarea>
-            </p>
+            </p> -->
             <p>
-              <input class="button" type="submit" value="Submit" />
+              <input class="button" type="submit" value="保存" />
             </p>
             </fieldset>
             <div class="clear"></div>
-            End .clear
+            <!-- End .clear -->
           </form>
         </div>
         <!-- End #tab2 -->
