--- a/Admin/Home/View/Menu/index.html
+++ b/Admin/Home/View/Menu/index.html
@@ -17,61 +17,16 @@
 </head>
 
 <body>
-<div id="body-wrapper">
-
-  <div id="sidebar">
-    <div id="sidebar-wrapper">
-
-        <h1 id="sidebar-title"><a href="#">Order Admin</a></h1>
-        <img id="logo" src="__PUBLIC__/Images/admin/logo.png" alt="Simpla Admin logo" />
-
-        <div id="profile-links">
-            您好,<a href="#" title="当前用户:{$username}">{$username}</a> |
-            <a href="__URL__/quit" title="退出">退出</a>
-        </div>
-
-        <ul id="main-nav">
-            <!-- 类型为nav-top-itrm current 表示选中时的样式 -->
-            <li> <a  href="#" class="nav-top-item">订单 Order</a>
-              <ul>
-                <li><a href="__APP__/Home/OrderIndex/index">当前订单</a></li>
-                <!-- <li><a href="#">获奖项目</a></li>
-                <li><a href="#">开发课题</a></li> -->
-              </ul>
-            </li>
-
-             <li> <a href="#" class="nav-top-item current">菜单 Menu</a>
-              <ul>
-                <li><a class="current"  href="#">菜单展示</a></li>
-                <li><a href="#">菜单录入</a></li>
-              </ul>
-            </li>
-
-
-
-            <!-- <li> <a href="#" class="nav-top-item">研究生 Student</a>
-              <ul>
-                <li><a href="#">研究生招收</a></li>
-                <li><a href="#">研究生教育</a></li>
-                <li><a href="#">在读研究生</a></li>
-                <li><a href="#">毕业研究生</a></li>
-              </ul>
-            </li>
-
-            <li> <a href="#" class="nav-top-item">其他 Others</a>
-              <ul>
-                <li><a href="#">软件</a></li>
-                <li><a href="#">出版物</a></li>
-              </ul>
-            </li> -->
-         </ul>
-
-    </div>
-  </div>
+<include file = "Public/header"/>
   <!-- End #sidebar -->
-
-
-
+  <!-- 浅色导航 -->
+  <div class="menu">
+          <ul>
+            <li>首页</li>
+            <li>></li>
+            <li>餐厅菜单</li>
+          </ul>
+  </div>
 
   <div id="main-content">
 
@@ -84,87 +39,30 @@
         </div>
     </noscript>
 
-
-    <!-- Page Head -->
-    <h2>菜单管理系统</h2>
-    <br></br>
-
-    <!--  <ul class="shortcut-buttons-set">
-     <li>
-       <a class="shortcut-button" href="__APP__/Home/OrderIndex/delete_all">
-           <span>
-               <img src="__PUBLIC__/Images/admin/icons/pencil_48.png" alt="icon" /><br />
-               清除全部订单
-           </span>
-       </a>
-     </li>
-     -->
-     <!-- <li>
-        <a class="shortcut-button" href="__URL__/article">
-            <span>
-                <img src="__PUBLIC__/Images/admin/icons/paper_content_pencil_48.png" alt="icon" /><br />
-                写新闻
-            </span>
-        </a>
-      </li> -->
-
-      <!--
-      <li>
-        <a class="shortcut-button" href="#">
-            <span>
-                <img src="__PUBLIC__/Images/admin/icons/image_add_48.png" alt="icon" /><br />
-                上传图片
-            </span>
-        </a>
-      </li>
-
-      <li>
-        <a class="shortcut-button" href="#">
-            <span>
-                <img src="__PUBLIC__/Images/admin/icons/clock_48.png" alt="icon" /><br />
-                添加事件
-            </span>
-        </a>
-      </li>
-      -->
-
-    </ul>
-
-
     <div class="clear"></div>
-
-
-
+    <!-- 菜单目录 -->
     <div class="content-box">
 
-      <!-- Start Content Box -->
+      <!-- 菜单目录导航 -->
       <div class="content-box-header">
-        <h3></h3>
+        <h3>菜单目录</h3>
         <ul class="content-box-tabs">
           <li><a href="#tab1" class="default-tab">菜单列表(共{$news_count}个)</a></li>
-          <!-- href must be unique and match the id of target div -->
-          <li><a href="#tab2">菜单录入</a></li>
         </ul>
-        <div class="clear"></div>
       </div>
-
+      <!-- 菜单目录导航----结束 -->
+      <!-- 目录内部信息 -->
       <div class="content-box-content">
-        <div class="tab-content default-tab" id="tab1">
-          <!-- This is the target div. id must match the href of this div's tab -->
-          <div class="notification attention png_bg"> <a href="#" class="close"><img src="__PUBLIC__/Images/admin/icons/cross_grey_small.png" title="Close this notification" alt="close" /></a>
-            <div>您好，{$username}，下面是订餐信息！ </div>
-          </div>
 
+          <!-- This is the target div. id must match the href of this div's tab -->
           <!-- 表头 -->
           <table>
             <thead>
               <tr>
-                <th>
-
-                </th>
-                <th>订餐菜单</th>
-                <th>订餐价格</th>
-                <th>订餐饭店</th>
+                <th></th>
+                <th>菜单</th>
+                <th>价格</th>
+                <th>餐厅</th>
                 <th>操作</th>
               </tr>
             </thead>
@@ -172,15 +70,149 @@
             <!-- 表内容部分 -->
             <tbody>
               <volist name="menu_list" id="vo">
+                <tr>
+                  <td></td>
+                  <td>{$vo.food_name} </td>
+                  <td>{$vo.food_price}</a></td>
+                  <td>{$vo.shopname}</td>
+                  <td>
+                    <!-- 操作按钮 -->
+                    <a href="__URL__/edit/id/{$vo.id}/str/menu" title="编辑"><img src="__PUBLIC__/Images/admin/icons/pencil.png" alt="编辑" /></a>
+                    <a href="__URL__/del_menu/id/{$vo.id}" title="删除"><img src="__PUBLIC__/Images/admin/icons/cross.png" alt="删除" /></a>
+
+                  </td>
+                </tr>
+              </volist>
+            </tbody>
+
+              <!-- 表尾 -->
+            <tfoot>
+              <tr>
+                <td colspan="6">
+                  <div class="pagination">
+                    {$page_method}
+                  <!--
+                    <a href="#" title="First Page">&laquo; First</a>
+                    <a href="#" title="Previous Page">&laquo; Previous</a>
+                    <a href="#" class="number" title="1">1</a>
+                    <a href="#" class="number" title="2">2</a>
+                    <a href="#" class="number current" title="3">3</a>
+                    <a href="#" class="number" title="4">4</a>
+                    <a href="#" title="Next Page">Next &raquo;</a>
+                    <a href="#" title="Last Page">Last &raquo;</a>
+                  -->
+                  </div>
+                  <div class="clear"></div>
+                </td>
+              </tr>
+            </tfoot>
+            <!-- 表尾----结束 -->
+          </table>
+          <!-- 表单----结束 -->
+
+          <a href="__URL__/add_menu" ><button type="button" class="button">新增菜单</button></a>
+      </div>
+      <!-- 目录内部信息----结束 -->
+    </div>
+    <!-- 菜单目录----结束 -->
+
+
+        <!-- <div class="tab-content" id="tab2">
+          <form action="__URL__/save" method="post">
+            <fieldset>
+            Set class to "column-left" or "column-right" on fieldsets to divide the form into columns
+            <p>
+              <label>菜单</label>
+              <input class="text-input small-input" type="text" id="small-input" name="food_name" />
+              <span class="input-notification success png_bg">Successful message</span>
+              Classes for input-notification: success, error, information, attention
+              <br />
+              <small>输入菜名！</small>
+            </p>
+            <p>
+              <label>价格</label>
+              <input class="text-input medium-input datepicker" type="text" id="medium-input" name="food_price" />
+              <span class="input-notification error png_bg">Error message</span>
+            </p>
+            <p>
+              <label>餐厅</label>
+              <input class="text-input large-input" type="text" id="large-input" name="food_res" />
+            </p> -->
+            <!-- <p>
+              <label>Checkboxes</label>
+              <input type="checkbox" name="checkbox1" />
+              This is a checkbox
+              <input type="checkbox" name="checkbox2" />
+              And this is another checkbox </p>
+            <p>
+              <label>Radio buttons</label>
+              <input type="radio" name="radio1" />
+              This is a radio button<br />
+              <input type="radio" name="radio1" />
+              This is another radio button </p>
+            <p>
+              <label>This is a drop down list</label>
+              <select name="dropdown" class="small-input">
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+                <option value="option4">Option 4</option>
+              </select></p>
+            <p>
+              <label>Textarea with WYSIWYG</label>
+              <textarea class="text-input textarea wysiwyg" id="textarea" name="textfield" cols="79" rows="15"></textarea>
+            </p> -->
+           <!--  <p>
+             <input class="button" type="submit" value="保存" />
+           </p>
+           </fieldset>
+           <div class="clear"></div>
+           End .clear
+                     </form>
+                   </div> -->
+        <!-- End #tab2 -->
+
+
+
+
+    <!-- 订餐餐厅的显示 -->
+    <div class="content-box" style="margin-top:50px">
+      <!-- Start Content Box -->
+      <div class="content-box-header">
+        <h3>餐厅</h3>
+      </div>
+
+      <div class="content-box-content">
+        <div class="tab-content default-tab">
+          <!-- This is the target div. id must match the href of this div's tab -->
+          <!-- 表头 -->
+          <table>
+            <thead>
+              <tr>
+                <th></th>
+                <th>餐厅</th>
+                <th>联系电话</th>
+                <th>地址</th>
+                <th>起送价格</th>
+                <th>备注</th>
+                <th>操作</th>
+              </tr>
+            </thead>
+
+            <!-- 表内容部分 -->
+            <tbody>
+              <volist name="shop_list" id="vo">
               <tr>
                 <td></td>
-                <td>{$vo.food_name} </td>
-                <td>{$vo.food_price}</a></td>
-                <td>{$vo.food_res}</td>
+                <td>{$vo.shopname} </td>
+                <td>{$vo.phone}</td>
+                <td>{$vo.address}</td>
+                <td>{$vo.start_price}</td>
+                <td>{$vo.info}</td>
                 <td>
                   <!-- 操作按钮 -->
-                  <a href="#" title="编辑"><img src="__PUBLIC__/Images/admin/icons/pencil.png" alt="编辑" /></a>
-                  <a href="__URL__/delete/id/{$vo.id}" title="删除"><img src="__PUBLIC__/Images/admin/icons/cross.png" alt="删除" /></a>
+                  <a href="__URL__/edit/id/{$vo.id}/str/shop" title="编辑"><img src="__PUBLIC__/Images/admin/icons/pencil.png" alt="编辑" /></a>
+                  <a href="__URL__/del_shop/id/{$vo.id}" title="删除"><img src="__PUBLIC__/Images/admin/icons/cross.png" alt="删除" /></a>
 
                 </td>
               </tr>
@@ -209,66 +241,9 @@
               </tr>
             </tfoot>
           </table>
+          <a href="__URL__/add_shop" ><button type="button" class="button">新增餐厅</button></a>
         </div>
-        <!-- End #tab1-->
-
-
-        <div class="tab-content" id="tab2">
-          <form action="__URL__/save" method="post">
-            <fieldset>
-            <!-- Set class to "column-left" or "column-right" on fieldsets to divide the form into columns -->
-            <p>
-              <label>菜单</label>
-              <input class="text-input small-input" type="text" id="small-input" name="food_name" />
-              <!-- <span class="input-notification success png_bg">Successful message</span> -->
-              <!-- Classes for input-notification: success, error, information, attention -->
-              <br />
-              <small>输入菜名！</small>
-            </p>
-            <p>
-              <label>价格</label>
-              <input class="text-input medium-input datepicker" type="text" id="medium-input" name="food_price" />
-              <!-- <span class="input-notification error png_bg">Error message</span>
-            </p> -->
-            <p>
-              <label>餐厅</label>
-              <input class="text-input large-input" type="text" id="large-input" name="food_res" />
-            </p>
-            <!-- <p>
-              <label>Checkboxes</label>
-              <input type="checkbox" name="checkbox1" />
-              This is a checkbox
-              <input type="checkbox" name="checkbox2" />
-              And this is another checkbox </p>
-            <p>
-              <label>Radio buttons</label>
-              <input type="radio" name="radio1" />
-              This is a radio button<br />
-              <input type="radio" name="radio1" />
-              This is another radio button </p>
-            <p>
-              <label>This is a drop down list</label>
-              <select name="dropdown" class="small-input">
-                <option value="option1">Option 1</option>
-                <option value="option2">Option 2</option>
-                <option value="option3">Option 3</option>
-                <option value="option4">Option 4</option>
-              </select></p>
-            <p>
-              <label>Textarea with WYSIWYG</label>
-              <textarea class="text-input textarea wysiwyg" id="textarea" name="textfield" cols="79" rows="15"></textarea>
-            </p> -->
-            <p>
-              <input class="button" type="submit" value="保存" />
-            </p>
-            </fieldset>
-            <div class="clear"></div>
-            <!-- End .clear -->
-          </form>
-        </div>
-        <!-- End #tab2 -->
       </div>
-      <!-- End .content-box-content -->
     </div>
     <!-- End .content-box -->
     <!-- <div class="content-box column-left">
@@ -305,12 +280,8 @@
     <div class="clear"></div> -->
 
 
-    <div id="footer"> <small>
-      <!-- Remove this notice or replace it with whatever you want -->
-      &#169; Copyright 2010 Your Company | Powered by <a href="http://www.865171.cn">admin templates</a> | <a href="#">Top</a> </small> </div>
-    <!-- End #footer -->
-  </div>
-  <!-- End #main-content -->
+    <include file = 'Public/Footer'/>
+
 </div>
 </body>
 <!-- Download From www.exet.tk-->
