zhu ce ye mian luo ji wan cheng

--- a/Admin/Home/View/index/index.html
+++ b/Admin/Home/View/index/index.html
@@ -33,8 +33,9 @@
 
     <div id="login-top">
         <h1>{$title}</h1>
+        <p class="logo">齐装网订餐系统</p>
         <!-- Logo (221px width) -->
-        <img id="logo" src="__PUBLIC__/Images/admin/logo.png" alt="{$title}" />
+        <!-- <img id="logo" src="__PUBLIC__/Images/admin/logo.png" alt="{$title}" /> -->
     </div>
 
     <!-- Form表单 -->
@@ -44,7 +45,7 @@
             <div>
                 <label>用户名</label>
                 <input class="text-input" type="text"  name="username"/>
-                <a href="__APP__/Home/index/add" style=" margin:10px">注册账号</a>
+                <a href="__URL__/adduser" style=" margin:10px">注册账号</a>
             </div>
 
             <div class="clear"></div>
@@ -63,7 +64,7 @@
 
             </div>
 
-            <div style="margin-left:100px">
+            <div style="margin-left:70px">
                 <img src="__APP__/Home/Common/verify" onclick="show(this)">
             </div>
 
