--- a/Public/Css/admin/style.css
+++ b/Public/Css/admin/style.css
@@ -592,13 +592,14 @@ body#add{
 
 #login-wrapper #login-top {
 				width: 100%;
-				padding: 140px 0 50px 0;
-				text-align: center;
+				padding: 140px 0 30px 0;
+				text-align:  center;
+				font-size:30px;
 				}
 				
 #login-wrapper #login-content {
 				text-align: left;
-				width: 410px;
+				width: 360px;
 				margin: 0 auto;
 				}
 				
